# lsr-fabric

./: README.md
lsr-fabric/: README.md  pyproject.toml
lsr-fabric/lsr_fabric/: __init__.py  adapters.py  core.py
lsr-fabric/lsr_fabric.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
